--- a/matrix_chatbot/requirements.txt
+++ b/matrix_chatbot/requirements.txt
@@ -1,12 +1,21 @@
-python-fasthtml
-MonsterUI
-llama-index-core
-llama-index-embeddings-openai
-llama-index-llms-openai
-llama-index-vector-stores-qdrant
-llama-index-postprocessor-cohere-rerank
-qdrant-client
-openai
-cohere
-fastapi
+# Matrix Chatbot Requirements
+fastapi==0.109.2
+uvicorn==0.27.1
+fasthtml==0.5.1
+monsterui==0.3.0
+mistletoe==1.3.0
+python-multipart==0.0.9
+jinja2==3.1.3
 
+# LLM and Vector DB Dependencies
+llama-index-core==0.10.19
+llama-index-llms-openai==0.1.7
+llama-index-embeddings-openai==0.1.5
+llama-index-vector-stores-qdrant==0.1.4
+llama-index-postprocessor-cohere-rerank==0.1.2
+openai==1.12.0
+qdrant-client==1.7.0
+
+# Utilities
+python-dotenv==1.0.1
+pydantic==2.6.1
