--- a/matrix_chatbot/requirements.txt
+++ b/matrix_chatbot/requirements.txt
@@ -1,21 +1,23 @@
 # Matrix Chatbot Requirements
-fastapi==0.109.2
-uvicorn==0.27.1
-fasthtml==0.5.1
-monsterui==0.3.0
-mistletoe==1.3.0
-python-multipart==0.0.9
-jinja2==3.1.3
+fastapi==0.115.12
+uvicorn==0.34.0
+python-fasthtml==0.12.6
+monsterui==1.0.11
+mistletoe==1.4.0
+python-multipart==0.0.20
+jinja2==3.1.6
 
 # LLM and Vector DB Dependencies
-llama-index-core==0.10.19
-llama-index-llms-openai==0.1.7
-llama-index-embeddings-openai==0.1.5
-llama-index-vector-stores-qdrant==0.1.4
-llama-index-postprocessor-cohere-rerank==0.1.2
-openai==1.12.0
-qdrant-client==1.7.0
+llama-index-core==0.12.27
+llama-index-llms-openai==0.3.29
+llama-index-embeddings-openai==0.3.1
+llama-index-vector-stores-qdrant==0.6.0
+llama-index-postprocessor-cohere-rerank==0.3.0
+openai==1.69.0
+qdrant-client==1.13.3
 
 # Utilities
-python-dotenv==1.0.1
-pydantic==2.6.1
+python-dotenv==1.1.0
+pydantic==2.11.1
+aiosqlite==0.21.0
+langfuse==2.60.2
